<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#73b9a2"
    android:orientation="vertical" >

    <!-- 游戏介绍 -->

    <TextView
        android:id="@+id/introduction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#f47921"
        android:text="@string/introduction"
        android:textColor="#2a5caa" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- 选择角色 -->
        <!-- 旁边显示选择的角色 -->

        <Button
            android:id="@+id/Liubei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Liubei" />

        <Button
            android:id="@+id/Guanyu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Guanyu" />

        <Button
            android:id="@+id/Zhangfei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Zhangfei" />
        <!-- 旁边显示选择的角色 -->
        <TextView 
            android:text="@string/SelectPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#122e29"
            />
        <EditText
            android:id="@+id/peopleSelext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#122e29" />
    </LinearLayout>

        <Button
            android:id="@+id/begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginGame" />
        
             <Button 
            android:id="@+id/gengxin"
            android:text="@string/gengxin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
      
       

</LinearLayout>